--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,19 @@
+alembic==1.13.1
 altgraph==0.17.4
 blinker==1.7.0
 click==8.1.7
 contourpy==1.2.1
 cycler==0.12.1
 Flask==3.0.3
+Flask-Migrate==4.0.7
+Flask-SQLAlchemy==3.1.1
 fonttools==4.51.0
+greenlet==3.0.3
 itsdangerous==2.2.0
 Jinja2==3.1.3
 kiwisolver==1.4.5
 macholib==1.16.3
+Mako==1.3.3
 MarkupSafe==2.1.5
 matplotlib==3.8.4
 numpy==1.26.4
@@ -20,4 +25,6 @@ pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 setuptools==69.5.1
 six==1.16.0
+SQLAlchemy==2.0.29
+typing_extensions==4.11.0
 Werkzeug==3.0.2
