--- a/requirements.txt
+++ b/requirements.txt
@@ -19,10 +19,12 @@ matplotlib==3.8.4
 numpy==1.26.4
 packaging==24.0
 pillow==10.3.0
+psycopg2-binary==2.9.9
 pyinstaller==6.6.0
 pyinstaller-hooks-contrib==2024.5
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 setuptools==69.5.1
 six==1.16.0
 SQLAlchemy==2.0.29
